examples/GOOD/GOOD_005_REF/main.nut
&[R123] {mod:"no"}

@ *[R123]
