examples/BAD/BAD_043_CONSISTENCY_1/main.nut
Import 'main2.nut'

&[R123] {"root":"yes"}
